--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
   "latex-workshop.latex.recipes": [
     {
       "name": "latex -> bibtex -> latex -> dvips -> ps2pdf",
-      "tools": ["latex", "bibtex", "latex", "dvips", "ps2pdf"]
+      "tools": ["latex", "dvips", "ps2pdf"]
     }
   ],
 
